--- a/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
@@ -129,49 +129,6 @@ $profile_image_url = $loginMember->profile_image_url;
 
                 ?>
 
-            <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">
-                <li><a href="/community" > Community </a> </li>
-               <li><a href="<?=$url_forum?>" target="_blank"> Forum</a> </li>
-               <li><a href="<?=$url_blog?>" target="_blank"> Blog</a> </li>
-               <li><a  id="plingList" href="/plings" class="popuppanel"> What are Plings? </a> </li>
-               <li><a  id="ocsapiContent" href="/partials/ocsapicontent.phtml" class="popuppanel"> API </a> </li>
-               <li> <a id="aboutContent" href="/partials/about.phtml" class="popuppanel">About </a>   </li>
-               <li id="user-context-dropdown-container">
-                 <div class="dropdown" id="user-dropdown">
-                   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                     <span class="glyphicon glyphicon-th"></span>
-                     <span class="caret"></span>
-                   </button>
-                   <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu2">
-                     <li id="opendesktop-link-item"><a href="http://www.opendesktop.org"></a></li>
-                     <li id="discourse-link-item"><a href="#"></a></li>
-                     <li id="gitlab-link-item"><a href="#"></a></li>
-                   </ul>
-                 </div>
-               </li>
-               <li id="user-dropdown-container">
-                 <div class="dropdown" id="user-dropdown">
-                   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                     <span class="glyphicon glyphicon-user"></span>
-                     <span class="caret"></span>
-                   </button>
-                   <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                     <li id="user-info-menu-item">
-                       <div id="user-info-section">
-                         <div class="user-avatar">
-                           <div class="no-avatar-user-letter">U</div>
-                         </div>
-                         <div class="user-details">
-                           details
-                         </div>
-                       </div>
-                     </li>
-                     <li id="main-seperator" role="separator" class="divider"></li>
-                     <li><a href="#">Another action</a></li>
-                     <li><a href="#">Something else here</a></li>
-                     <li><a href="#">Separated link</a></li>
-                   </ul>
-                 </div>
-               </li>
-            </ul>
+            <div id="metaheader"></div>
         </div>
+        <script type="text/javascript" src="/theme/react/metaheader.js"></script>
