--- a/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
@@ -57,7 +57,6 @@ $profile_image_url = $loginMember->profile_image_url;
             $domainshelper = new Default_View_Helper_FetchDomains();
             $this->domainobjects = $domainshelper->fetchDomainObjects();
             $sname = Zend_Registry::get('store_host');
-
             echo '<ul class="nav nav-pills meta-nav-top left">';
             $i = 0;
 
@@ -129,6 +128,54 @@ $profile_image_url = $loginMember->profile_image_url;
 
                 ?>
 
-            <div id="metaheader"></div>
+                <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">
+                   <li><a href="/community" > Community </a> </li>
+                   <li><a href="<?=$url_forum?>" target="_blank"> Forum</a> </li>
+                   <li><a href="<?=$url_blog?>" target="_blank"> Blog</a> </li>
+                   <li><a id="plingList" href="/plings" class="popuppanel"> What are Plings? </a></li>
+                   <li><a id="ocsapiContent" href="/partials/ocsapicontent.phtml" class="popuppanel"> API </a> </li>
+                   <li><a id="aboutContent" href="/partials/about.phtml" class="popuppanel">About </a></li>
+                   <li id="user-context-dropdown-container" class="metaheader-menu-item">
+                     <div id="user-dropdown">
+                       <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                         <span class="glyphicon glyphicon-th"></span>
+                       </button>
+                       <ul class="dropdown-menu three-column dropdown-menu-right" aria-labelledby="dropdownMenu2">
+                         <li id="opendesktop-link-item"><a href="http://www.opendesktop.org"></a></li>
+                         <li id="discourse-link-item"><a href="http://discourse.opendesktop.org/"></a></li>
+                         <li id="gitlab-link-item"><a href="https://about.gitlab.com/"></a></li>
+                         <li id="opencode-link-item"><a href="https://about.gitlab.com/"></a></li>
+                       </ul>
+                     </div>
+                   </li>
+                   <li id="user-dropdown-container" class="metaheader-menu-item">
+                     <div id="user-dropdown">
+                       <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                         <img src="<?=$profile_image_url?>"/>
+                       </button>
+                       <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                         <li id="user-info-menu-item">
+                           <div id="user-info-section">
+                             <div class="user-avatar">
+                               <div class="no-avatar-user-letter"><img src="<?=$profile_image_url?>"/></div>
+                             </div>
+                             <div class="user-details">
+                               <ul>
+                                 <li><b><?=$username?></b></li>
+                                 <li><a><?=$loginMember->mail?></a></li>
+                                 <li><a>Profile</a> - <a>Privacy</a></li>
+                                 <li><button class="btn btn-default btn-blue">Acount</button></li>
+                               </ul>
+                             </div>
+                           </div>
+                         </li>
+                         <li id="main-seperator" role="separator" class="divider"></li>
+                         <li class="buttons">
+                           <button class="btn btn-default btn-metaheader">Add Acount</button>
+                           <button class="btn btn-default pull-right btn-metaheader">Sign Up</button>
+                         </li>
+                       </ul>
+                     </div>
+                   </li>
+                </ul>
         </div>
-        <script type="text/javascript" src="/theme/react/metaheader.js"></script>
