--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -9,122 +9,214 @@ header {
   }
 }
 
-#user-dropdown {
-  margin-bottom: 2px;
-
-  > .dropdown-toggle {
-    padding: 0 5px;
-    .transition();
-    background-color: white;
-    color: #6a7686;
-  }
-
-  .dropdown-menu {
-    width: 300px;
-    padding-top: 0;
-    overflow: hidden;
-
-    ::before {
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 0 5px 8.7px 5px;
-      border-color: transparent transparent #ffffff transparent;
+.small.metamenu {
+  > ul {
+    &.left {
+      margin-left: 5px;
     }
-
-    #user-info-section {
-      height: 100px;
-      padding: 10px 20px;
-      background: #f8f8f8;
-
-      .user-avatar {
-        width: 40%;
-        height: 80px;
-        width: 80px;
-        float: left;
-
-        .no-avatar-user-letter {
-          border-radius: 100%;
-          height: 100%;
-          width: 100%;
-          background-color: #c1c1c1;
-          text-align: center;
-          line-height: 80px;
-          font-size: 50px;
-          color: white;
-          overflow: hidden;
-
-          img {
-            width: 100%;
-          }
-        }
-      }
-      .user-details {
-        width: 175px;
-        padding-left: 20px;
-        float: left;
-      }
-    }
-
-    #main-seperator {
-      margin-top: 0;
-    }
-
-    li.buttons {
-      padding: 0 10px 5px 10px;
+    > li {
+      margin-top: 10px;
     }
   }
 }
 
-#user-context-dropdown-container {
-  margin-bottom: 2px;
+.metaheader-menu-item {
+  margin: 5px 0;
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
 
-  .dropdown-toggle {
-    padding: 0 5px;
-    .transition();
+  #user-dropdown {
+    margin-bottom: 2px;
+    position: relative;
+    margin: 5px 0;
+    height: 32px;
+    width: 32px;
+    padding: 0;
+
+    .dropdown-toggle {
+      padding: 0;
+      background-color: white;
+      color: #6a7686;
+      .transition();
+      height: 32px;
+      width: 32px;
+      overflow: hidden;
+
+      .glyphicon {
+        font-size: 16px;
+        top: 3px;
+        font-style: normal;
+        font-weight: 100;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 100%;
+      }
+
+      &:active {
+        box-shadow: none;
+        outline: none;
+      }
+
+    }
+
+    .dropdown-menu {
+      padding: 0;
+      width: 330px;
+      top: 50px;
+      background: #fff;
+      border: 1px solid #ccc;
+      border-color: rgba(0,0,0,.2);
+      color: #000;
+      -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.2);
+      box-shadow: 0 2px 10px rgba(0,0,0,.2);
+
+      .btn-blue {
+        border-radius: 2px;
+        padding: 0 20px;
+        font-size: 12px;
+        height: 25px;
+        line-height: 25px;
+        background: #4d90fe;
+        font-weight: bold;
+        border: 1px solid #3079ed;
+      }
+
+
+      &::before {
+        content: "";
+        position: absolute;
+        right: 6px;
+        top: -9px;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 0 8.5px 8.5px;
+        border-color: transparent transparent #b7bcc4 transparent;
+        border-bottom-color: #fff;
+        border-style: dashed dashed solid;
+        z-index: 1;
+      }
+
+      #user-info-section {
+        height: auto;
+        padding: 10px 20px;
+        background: white;
+        float: left;
+
+        .user-avatar {
+          height: 110px;
+          width: 110px;
+          float: left;
+
+          .no-avatar-user-letter {
+            border-radius: 100%;
+            height: 100%;
+            width: 100%;
+            background-color: #c1c1c1;
+            text-align: center;
+            line-height: 80px;
+            font-size: 50px;
+            color: white;
+            overflow: hidden;
+
+            img {
+              width: 100%;
+            }
+          }
+        }
+        .user-details {
+          width: 175px;
+          padding-left: 20px;
+          float: left;
+
+          ul {
+            padding: 0;
+            margin: 0;
+            list-style-type: none;
+            float: left;
+            width: 100%;
+
+            li {
+              width: 100%;
+              float: left;
+              height: auto;
+              line-height: 18px;
+              font-size: 12px;
+
+              button {
+                margin-top: 9px;
+              }
+            }
+          }
+        }
+      }
+
+      #main-seperator {
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+
+      li.buttons {
+        padding: 5px 10px;
+        background-color: #f5f5f5;
+
+        .btn {
+          border-radius: 2px;
+          padding: 0 20px;
+          font-size: 12px;
+          height: 25px;
+          line-height: 25px;
+          font-weight: bold;
+        }
+      }
+    }
+
   }
 
-  .dropdown-menu {
-    column-count: 3;
-    padding: 5px;
+  &#user-context-dropdown-container {
+    .dropdown-menu  {
+      padding: 14px;
+      li {
+          height: 100px;
+          width: 100px;
+          padding: 5px;
 
-    li {
-      height: 90px;
-      padding: 5px;
+          a {
+            display: block;
+            width:100%;
+            height: 100%;
+            background-size: 80px;
+            background-position: center center;
+            background-repeat: no-repeat;
+          }
 
-      a {
-        display: block;
-        width:100%;
-        height: 100%;
-      }
+          &#opendesktop-link-item {
+            a {
+              background-image: url('../img/logo-opendesktop.png');
+            }
+          }
 
-      &#opendesktop-link-item {
+          &#discourse-link-item {
+            a {
+              background-image: url('../img/logo-discourse.png');
+            }
+          }
 
-        a {
-          background-size: 414px 73px;
-          background-image: url(https://www.opendesktop.org/images_sys/store_opendesktop/logo.png);
-          background-repeat: no-repeat;
-          background-position-y: 5px;
+          &#gitlab-link-item {
+            a {
+              background-image: url(../img/logo-gitlab.png);
+            }
+          }
+
+          &#opencode-link-item {
+            a {
+              background-image: url(../img/logo-opencode.png);
+            }
+          }
         }
-      }
-
-      &#discourse-link-item {
-
-        a {
-          background-size: cover;
-          background-image: url('../img/logo-discourse.png');
-        }
-      }
-
-      &#gitlab-link-item {
-
-        a {
-          background-size: 76px;
-          background-image: url(../img/logo-gitlab.png);
-          background-repeat: no-repeat;
-          background-position-y: 5px;
-        }
-      }
     }
   }
 }
