--- a/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
@@ -190,18 +190,19 @@ $profile_image_url = $loginMember->profile_image_url;
                                  <li><?=$loginMember->mail?></li>
                                  <li></li>
                                  <li><a>Profile</a> - <a>Privacy</a></li>
-                                 <li><button class="btn btn-default btn-blue">Acount</button></li>
+                                 <li><button class="btn btn-default btn-blue">Account</button></li>
                                </ul>
                              </div>
                            </div>
                          </li>
                          <li id="main-seperator" role="separator" class="divider"></li>
                          <li class="buttons">
-                           <button class="btn btn-default btn-metaheader">Add Acount</button>
+                           <button class="btn btn-default btn-metaheader">Add Account</button>
                            <button class="btn btn-default pull-right btn-metaheader">Sign Up</button>
                          </li>
                        </ul>
                      </div>
                    </li>
+                   <li id="user-signin-button" class="metaheader-menu-item"><button class="btn btn-default btn-blue">Sign In</button></li>
                 </ul>
         </div>
