--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -65,7 +65,7 @@ header {
     .dropdown-menu {
       border-radius: 0;
       padding: 0;
-      width: 320px;
+      width: 317px;
       top: 50px;
       background: #fff;
       border: 1px solid #ccc;
@@ -76,10 +76,9 @@ header {
 
       .btn-blue {
         border-radius: 2px;
-        padding: 0 15px;
+        padding: 0 12px;
         font-size: 12px;
-        height: 27px;
-        line-height: 26px;
+        height: 30px;
         background: #4d90fe;
         font-weight: bold;
         border: 1px solid #3079ed;
@@ -97,7 +96,7 @@ header {
         content: "";
         position: absolute;
         right: 6px;
-        top: -9px;
+        top: -8px;
         width: 0;
         height: 0;
         border-style: solid;
@@ -153,6 +152,7 @@ header {
           width: 175px;
           padding-left: 20px;
           float: left;
+          margin-top: -4px;
 
           ul {
             padding: 0;
@@ -179,7 +179,7 @@ header {
               }
 
               button {
-                margin-top: 19px;
+                margin-top: 16px;
               }
             }
           }
@@ -193,7 +193,7 @@ header {
       }
 
       li.buttons {
-        padding: 10px;
+        padding: 10px 20px;
         background-color: #f5f5f5;
 
         .btn {
@@ -221,7 +221,7 @@ header {
 
       li {
         height: auto;
-        width: 87px;
+        width: 86px;
         border: 1px solid white;
         margin: 5px 0;
 
@@ -291,6 +291,25 @@ header {
           }
         }
 
+      }
+    }
+  }
+
+  &#user-signin-button {
+    padding-top: 6px;
+
+    .btn-blue {
+      border-radius: 2px;
+      padding: 0 12px;
+      font-size: 12px;
+      height: 30px;
+      background: #4d90fe;
+      font-weight: bold;
+      border: 1px solid #3079ed;
+      background: -webkit-linear-gradient(top,#4387fd,#4683ea);
+
+      &:hover {
+        color: white;
       }
     }
   }
