--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -10,6 +10,11 @@ header {
 }
 
 .small.metamenu {
+  width: 100%;
+  background-color: #fff;
+  height: auto;
+  float: left;
+
   > ul {
     &.left {
       margin-left: 5px;
