--- a/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
@@ -203,6 +203,6 @@ $profile_image_url = $loginMember->profile_image_url;
                        </ul>
                      </div>
                    </li>
-                   <li id="user-signin-button" class="metaheader-menu-item"><button class="btn btn-default btn-blue">Sign In</button></li>
+                   <li id="user-signin-button" class="metaheader-menu-item"><button class="btn btn-default btn-blue"><a href="/login">Login</a></button></li>
                 </ul>
         </div>
