--- a/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
@@ -130,7 +130,6 @@ $profile_image_url = $loginMember->profile_image_url;
 
                 <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">
                    <li><a href="/community" > Community </a> </li>
-                   <li><a href="<?=$url_forum?>" target="_blank"> Forum</a> </li>
                    <li><a href="<?=$url_blog?>" target="_blank"> Blog</a> </li>
                    <li><a id="plingList" href="/plings" class="popuppanel"> What are Plings? </a></li>
                    <li><a id="ocsapiContent" href="/partials/ocsapicontent.phtml" class="popuppanel"> API </a> </li>
@@ -168,41 +167,53 @@ $profile_image_url = $loginMember->profile_image_url;
                        </ul>
                      </div>
                    </li>
-                   <li id="user-dropdown-container" class="metaheader-menu-item">
-                     <div id="user-dropdown">
-                       <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                         <img src="<?=$profile_image_url?>"/>
-                       </button>
-                       <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                         <li id="user-info-menu-item">
-                           <div id="user-info-section">
-                             <div class="user-avatar">
-                               <div class="no-avatar-user-letter">
-                                 <img src="<?=$profile_image_url?>"/>
-                                 <a class="change-profile-pic">
-                                   Change
-                                 </a>
-                               </div>
-                             </div>
-                             <div class="user-details">
-                               <ul>
-                                 <li><b><?=$username?></b></li>
-                                 <li><?=$loginMember->mail?></li>
-                                 <li></li>
-                                 <li><a>Profile</a> - <a>Privacy</a></li>
-                                 <li><button class="btn btn-default btn-blue">Account</button></li>
-                               </ul>
-                             </div>
-                           </div>
-                         </li>
-                         <li id="main-seperator" role="separator" class="divider"></li>
-                         <li class="buttons">
-                           <button class="btn btn-default btn-metaheader">Add Account</button>
-                           <button class="btn btn-default pull-right btn-metaheader">Sign Up</button>
-                         </li>
-                       </ul>
-                     </div>
-                   </li>
-                   <li id="user-signin-button" class="metaheader-menu-item"><button class="btn btn-default btn-blue"><a href="/login">Login</a></button></li>
+
+                  <?php if ($loginMember->mail){ ?>
+                    <li id="user-dropdown-container" class="metaheader-menu-item">
+                      <div id="user-dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                          <img src="<?=$profile_image_url?>"/>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                          <li id="user-info-menu-item">
+                            <div id="user-info-section">
+                              <div class="user-avatar">
+                                <div class="no-avatar-user-letter">
+                                  <img src="<?=$profile_image_url?>"/>
+                                  <a class="change-profile-pic">
+                                    Change
+                                  </a>
+                                </div>
+                              </div>
+                              <div class="user-details">
+                                <ul>
+                                  <li><b><?=$username?></b></li>
+                                  <li><?=$loginMember->mail?></li>
+                                  <li></li>
+                                  <li><a>Profile</a> - <a>Privacy</a></li>
+                                  <li><button class="btn btn-default btn-blue">Account</button></li>
+                                </ul>
+                              </div>
+                            </div>
+                          </li>
+                          <li id="main-seperator" role="separator" class="divider"></li>
+                          <li class="buttons">
+                            <button class="btn btn-default btn-metaheader">Add Account</button>
+                            <button class="btn btn-default pull-right btn-metaheader"><a href="/register">Sign Up</a></button>
+                          </li>
+                        </ul>
+                      </div>
+                    </li>
+                  <?php } else { ?>
+                        <li id="user-signin-button" class="metaheader-menu-item">
+                          <a href="/login">
+                            <button class="btn btn-default btn-blue">Login</button>
+                          </a>
+                        </li>
+                  <?php } ?>
                 </ul>
+
         </div>
+
+
+    <div id="metaheader"></div>
