--- a/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
@@ -143,25 +143,19 @@ $profile_image_url = $loginMember->profile_image_url;
                          <li id="opendesktop-link-item">
                            <a href="http://www.opendesktop.org">
                              <div class="icon"></div>
-                             <span>OpenDesktop</span>
+                             <span>Themes & Apps</span>
                            </a>
                          </li>
                          <li id="discourse-link-item">
                            <a href="http://discourse.opendesktop.org/">
                              <div class="icon"></div>
-                             <span>Discourse</span>
-                           </a>
-                         </li>
-                         <li id="gitlab-link-item">
-                           <a href="https://about.gitlab.com/">
-                             <div class="icon"></div>
-                             <span>Gitlab</span>
+                             <span>Discussion Boards</span>
                            </a>
                          </li>
                          <li id="opencode-link-item">
                            <a href="https://www.opencode.net/">
                              <div class="icon"></div>
-                             <span>OpenCode</span>
+                             <span>Coding Tools</span>
                            </a>
                          </li>
                        </ul>
