--- a/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
@@ -217,5 +217,6 @@ $json_menu = $this->fetchMetaheaderMenuJson();
       var domains = <?=$json_menu?>;
       var baseUrl = "<?=$baseurl?>";
       var blogUrl = "<?=$url_blog?>";
+      var sName = "<?=$sname?>";
     </script>
     <script type="text/javascript" src="/theme/react/metaheader.js"></script>
