--- a/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
@@ -33,196 +33,28 @@ $json_menu = $this->fetchMetaheaderMenuJson();
 $loginMember = $this->getAuthUser();
 if($loginMember->member_id)
 {
-    $json_user = Zend_Json::encode($loginMember);  
+    $json_user = Zend_Json::encode($loginMember);
     $username = $loginMember->username;
     $profile_image_url = $loginMember->profile_image_url;
 }else{
-  $json_user = Zend_Json::encode(null);  
+  $json_user = Zend_Json::encode(null);
   $username = null;
   $profile_image_url = null;
 }
 
 ?>
     <style>
-
-        .nav-divider-pling{
-            color:#E2E2E2;
-        }
-        .nav-pills > li + li {
-                margin-left: 10px;
-            }
-            .dropdown-menu > li > a{
-                font-size: 12px;
-            }
-        .metamenu .dropdown:hover .dropdown-menu {
-            margin-left: -16px;
-        }
-        .metamenu .dropdown-menu li{
-            width: 100%;
-        }
-
-        .metamenu ul.dropdown-menu  li span{ color:#999; }
-        .metamenu ul.dropdown-menu  li.active span{ color:#eee; }
+      .nav-divider-pling{color:#E2E2E2;}
+      .nav-pills > li + li {margin-left: 10px;}
+      .dropdown-menu > li > a{font-size: 12px;}
+      .metamenu .dropdown:hover .dropdown-menu {margin-left: -16px;}
+      .metamenu .dropdown-menu li {width: 100%;}
+      .metamenu ul.dropdown-menu  li span{ color:#999; }
+      .metamenu ul.dropdown-menu  li.active span{ color:#eee; }
     </style>
 
-    <div class="small metamenu" >
-        <?php
-
-
-            echo '<ul class="nav nav-pills meta-nav-top left">';
-            $i = 0;
-            echo '<li class="" style="background-color:#eee; -moz-border-radius: 5px; border-radius: 5px; "><a href="http://'.$baseurl.'"><img src="/images/system/ocs-logo-rounded-16x16.png" class="logo"/> openDesktop.org :</a> </li>';
-
-            $preOrder = 0;
-            $curOrder = 0;
-            foreach ($this->domainobjects as $obj) {
-                $o =  $obj['order'];
-                //$curOrder = floor($obj['order']/1000);
-                //if($curOrder<10 or $curOrder>50) continue;
-                $curOrder = $obj['calcOrder'];
-                $host =$obj['host'];
-                $name =$obj['name'];
-                if($curOrder!= $preOrder) $i=0;
-
-                if($curOrder > $preOrder && $preOrder !=0){
-                   echo '</ul></li>';
-                }
-                if($i==0 && $preOrder !=0) echo '<li class="nav-divider-pling"> &#149; </li>';
-
-                if($curOrder ==9 && $i ==0){
-                    // Desktops
-                    echo '<li class="dropdown"><a href="#">Desktops</a><ul class="dropdown-menu">';
-                }else if($curOrder==10 && $i==0){
-                    // applications
-                    echo '<li class="dropdown"><a href="#">Applications</a><ul class="dropdown-menu">';
-                }else if($curOrder ==20 && $i ==0){
-                    // artworks
-                    echo '<li class="dropdown"><a href="#">Addons</a><ul class="dropdown-menu">';
-                }/*else if($curOrder ==30 && $i ==0){
-                    // artworks
-                    echo '<li class="dropdown"><a href="#">Desktops</a><ul class="dropdown-menu">';
-                }*/
-                else if($curOrder ==40 && $i ==0){
-                    // multimedia
-                    echo '<li class="dropdown"><a href="#">Artwork</a><ul class="dropdown-menu">';
-                }
-                else if($curOrder ==50 && $i ==0){
-                    // multimedia
-                    echo '<li class="dropdown"><a href="#">Other</a><ul class="dropdown-menu">';
-                }
-                if($sname == $host )
-                {
-                    echo '<li class="active">';
-                }else
-                {
-                    echo '<li>';
-                }
-                /*
-                $keyword = $obj['meta_keywords'];
-
-                if($keyword!='')
-                {
-                    $keyword = ' - '.$keyword;
-                }
-                */
-                 // z.b 150001 ende ==1 go real link otherwise /s/$name
-                $last_char_check = substr($o, -1);
-
-                echo '<a href="http://' . ($last_char_check=='1'?$host:$baseurl.'/s/'.$name) . '">'.  $name .'</a> </li>';
-
-                //$preOrder = floor($obj['order']/1000);
-                $preOrder =$obj['calcOrder'];
-                 $i++;
-            }
-            echo '</ul></li>';
-            echo '</ul>';
-
-                ?>
-
-                <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">
-                   <li><a href="/community" > Community </a> </li>
-                   <li><a href="<?=$url_blog?>" target="_blank"> Blog</a> </li>
-                   <li><a id="plingList" href="/plings" class="popuppanel"> What are Plings? </a></li>
-                   <li><a id="ocsapiContent" href="/partials/ocsapicontent.phtml" class="popuppanel"> API </a> </li>
-                   <li><a id="aboutContent" href="/partials/about.phtml" class="popuppanel">About </a></li>
-                   <li id="user-context-dropdown-container" class="metaheader-menu-item">
-                     <div id="user-dropdown">
-                       <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                         <span class="glyphicon glyphicon-th"></span>
-                       </button>
-                       <ul class="dropdown-menu three-column dropdown-menu-right" aria-labelledby="dropdownMenu2">
-                         <li id="opendesktop-link-item">
-                           <a href="http://www.opendesktop.org">
-                             <div class="icon"></div>
-                             <span>Themes & Apps</span>
-                           </a>
-                         </li>
-                         <li id="discourse-link-item">
-                           <a href="http://discourse.opendesktop.org/">
-                             <div class="icon"></div>
-                             <span>Discussion Boards</span>
-                           </a>
-                         </li>
-                         <li id="opencode-link-item">
-                           <a href="https://www.opencode.net/">
-                             <div class="icon"></div>
-                             <span>Coding Tools</span>
-                           </a>
-                         </li>
-                       </ul>
-                     </div>
-                   </li>
-
-                  <?php if ($loginMember->mail){ ?>
-                    <li id="user-dropdown-container" class="metaheader-menu-item">
-                      <div id="user-dropdown">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                          <img src="<?=$profile_image_url?>"/>
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                          <li id="user-info-menu-item">
-                            <div id="user-info-section">
-                              <div class="user-avatar">
-                                <div class="no-avatar-user-letter">
-                                  <img src="<?=$profile_image_url?>"/>
-                                  <a class="change-profile-pic">
-                                    Change
-                                  </a>
-                                </div>
-                              </div>
-                              <div class="user-details">
-                                <ul>
-                                  <li><b><?=$username?></b></li>
-                                  <li><?=$loginMember->mail?></li>
-                                  <li></li>
-                                  <li><a>Profile</a> - <a>Privacy</a></li>
-                                  <li><button class="btn btn-default btn-blue">Account</button></li>
-                                </ul>
-                              </div>
-                            </div>
-                          </li>
-                          <li id="main-seperator" role="separator" class="divider"></li>
-                          <li class="buttons">
-                            <button class="btn btn-default btn-metaheader">Add Account</button>
-                            <button class="btn btn-default pull-right btn-metaheader"><a href="/register">Sign Up</a></button>
-                          </li>
-                        </ul>
-                      </div>
-                    </li>
-                  <?php } else { ?>
-                        <li id="user-signin-button" class="metaheader-menu-item">
-                          <a href="/login">
-                            <button class="btn btn-default btn-blue">Login</button>
-                          </a>
-                        </li>
-                  <?php } ?>
-                </ul>
-
-        </div>
-
-
-
     <div id="metaheader"></div>
+
     <script>
       var domains = <?=$json_menu?>;
       var user = <?= $json_user ?>;
@@ -230,4 +62,5 @@ if($loginMember->member_id)
       var blogUrl = "<?=$url_blog?>";
       var sName = "<?=$sname?>";
     </script>
+    
     <script type="text/javascript" src="/theme/react/metaheader.js"></script>
