--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -107,6 +107,11 @@ out: ../css/style.css, sourcemap: true, compress: true
         background-color: white;
         color: #6a7686;
 
+        &:active {
+          background-color: white;
+          box-shadow: none;
+        }
+
         .glyphicon {
           font-size: 16px;
           top: 1px;
@@ -120,7 +125,7 @@ out: ../css/style.css, sourcemap: true, compress: true
         border-radius: 0;
         padding: 0;
         width: 320px;
-        top: 50px;
+        top: 40px;
         background: #fff;
         border: 1px solid #ccc;
         border-color: rgba(0,0,0,0.2);
@@ -157,7 +162,7 @@ out: ../css/style.css, sourcemap: true, compress: true
           right: -42px;
 
           &::before {
-            right: 49px;
+            right: 45px;
           }
 
           li {
@@ -238,6 +243,134 @@ out: ../css/style.css, sourcemap: true, compress: true
             &:active {
               a {
                 background-color: white;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    #user-login-menu-container {
+      .user-dropdown {
+        .dropdown-toggle {
+          img {
+            height: 32px;
+            width: 32px;
+            border-radius: 100%;
+            margin-top: -4px;
+          }
+        }
+        .dropdown-menu {
+          #user-info-section {
+            height: auto;
+            padding: 20px;
+            background: white;
+            float: left;
+
+            .user-avatar {
+              height: 96px;
+              width: 96px;
+              float: left;
+              border-radius: 100%;
+              overflow: hidden;
+
+              .no-avatar-user-letter {
+                border-radius: 100%;
+                height: 100%;
+                width: 100%;
+                background-color: #c1c1c1;
+                text-align: center;
+                line-height: 80px;
+                font-size: 50px;
+                color: white;
+                overflow: hidden;
+                position: relative;
+
+                img {
+                  width: 100%;
+                }
+
+                .change-profile-pic {
+                  width: 100%;
+                  position: absolute;
+                  bottom: 0;
+                  font-size: 9px;
+                  height: 26px;
+                  left: 0;
+                  background-color: rgba(0,0,0,0.4);
+                  line-height: 30px;
+                  color: white;
+                  cursor: pointer;
+                  font-weight: bold;
+                }
+              }
+            }
+            .user-details {
+              width: 175px;
+              padding-left: 20px;
+              float: left;
+              margin-top: -4px;
+
+              ul {
+                padding: 0;
+                margin: 0;
+                list-style-type: none;
+                float: left;
+                width: 100%;
+
+                li {
+                  width: 100%;
+                  float: left;
+                  height: auto;
+                  line-height: 15px;
+                  font-size: 13px;
+                  min-height: 8px;
+                  color: #6a7686;
+
+                  a {
+                    color: #36c;
+                  }
+
+                  b {
+                    color: black;
+                  }
+
+                  button {
+                    margin-top: 16px;
+                  }
+                }
+              }
+            }
+          }
+          #main-seperator {
+            margin-top: 0;
+            margin-bottom: 0;
+            background-color: #ccc;
+          }
+          li.buttons {
+            padding: 10px 20px;
+            background-color: #f5f5f5;
+
+            .btn {
+              border-radius: 2px;
+              padding: 0 16px;
+              font-size: 12px;
+              height: 30px;
+              font-weight: normal;
+              color: #666 !important;
+              background: #f8f8f8;
+              border: 1px solid #c6c6c6;
+
+              &:hover {
+                -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+                box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+                border-color: #c6c6c6;
+                color: #222;
+                background-color: #fff;
+                background-image: -webkit-gradient(linear,left top,left bottom,from(#fff),to(#f8f8f8));
+                background-image: -webkit-linear-gradient(top,#fff,#f8f8f8);
+                background-image: -webkit-linear-gradient(top,#fff,#f8f8f8);
+                background-image: linear-gradient(top,#fff,#f8f8f8);
               }
             }
           }
@@ -355,122 +488,6 @@ header {
         border-bottom-color: #fff;
         border-style: dashed dashed solid;
         z-index: 1;
-      }
-
-      #user-info-section {
-        height: auto;
-        padding: 20px;
-        background: white;
-        float: left;
-
-        .user-avatar {
-          height: 96px;
-          width: 96px;
-          float: left;
-          border-radius: 100%;
-          overflow: hidden;
-
-          .no-avatar-user-letter {
-            border-radius: 100%;
-            height: 100%;
-            width: 100%;
-            background-color: #c1c1c1;
-            text-align: center;
-            line-height: 80px;
-            font-size: 50px;
-            color: white;
-            overflow: hidden;
-            position: relative;
-
-            img {
-              width: 100%;
-            }
-
-            .change-profile-pic {
-              width: 100%;
-              position: absolute;
-              bottom: 0;
-              font-size: 9px;
-              height: 26px;
-              left: 0;
-              background-color: rgba(0,0,0,0.4);
-              line-height: 30px;
-              color: white;
-              cursor: pointer;
-              font-weight: bold;
-            }
-          }
-        }
-        .user-details {
-          width: 175px;
-          padding-left: 20px;
-          float: left;
-          margin-top: -4px;
-
-          ul {
-            padding: 0;
-            margin: 0;
-            list-style-type: none;
-            float: left;
-            width: 100%;
-
-            li {
-              width: 100%;
-              float: left;
-              height: auto;
-              line-height: 15px;
-              font-size: 13px;
-              min-height: 8px;
-              color: #6a7686;
-
-              a {
-                color: #36c;
-              }
-
-              b {
-                color: black;
-              }
-
-              button {
-                margin-top: 16px;
-              }
-            }
-          }
-        }
-      }
-
-      #main-seperator {
-        margin-top: 0;
-        margin-bottom: 0;
-        background-color: #ccc;
-      }
-
-      li.buttons {
-        padding: 10px 20px;
-        background-color: #f5f5f5;
-
-        .btn {
-          border-radius: 2px;
-          padding: 0 16px;
-          font-size: 12px;
-          height: 30px;
-          font-weight: normal;
-          color: #666;
-          background: #f8f8f8;
-          border: 1px solid #c6c6c6;
-
-          &:hover {
-            -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-            box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-            border-color: #c6c6c6;
-            color: #222;
-            background-color: #fff;
-            background-image: -webkit-gradient(linear,left top,left bottom,from(#fff),to(#f8f8f8));
-            background-image: -webkit-linear-gradient(top,#fff,#f8f8f8);
-            background-image: -webkit-linear-gradient(top,#fff,#f8f8f8);
-            background-image: linear-gradient(top,#fff,#f8f8f8);
-          }
-        }
       }
     }
 
