--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -56,7 +56,7 @@ out: ../css/style.css, sourcemap: true, compress: true
       }
 
       &#domains-menu {
-        margin-left: 20px;
+        margin-left: 10px;
 
         > li {
           padding-left: 0;
@@ -88,7 +88,7 @@ out: ../css/style.css, sourcemap: true, compress: true
       }
 
       &#user-menu {
-        margin-right: 20px;
+        margin-right: 10px;
 
         > li {
 
@@ -213,6 +213,7 @@ out: ../css/style.css, sourcemap: true, compress: true
               a {
                 .icon {
                   background-image: url('../img/logo-discourse.png');
+                  background-size: 58px;
                 }
               }
             }
@@ -229,6 +230,7 @@ out: ../css/style.css, sourcemap: true, compress: true
               a {
                 .icon {
                   background-image: url(../img/logo-opencode.png);
+                  background-size: 45px; 
                 }
               }
             }
